--- a/Handled/src/app/navbar/navbar.component.scss
+++ b/Handled/src/app/navbar/navbar.component.scss
@@ -1,4 +1,7 @@
-
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
+* { 
+    font-family: 'Lato', sans-serif !important; 
+}
 #brand{
     color: whitesmoke;
 }
